--- a/webdocs/test/testRunner.html
+++ b/webdocs/test/testRunner.html
@@ -8,15 +8,16 @@
 </head>
 <body>
   
-  <!-- <div id="navigation">
-    <a href="http://akonda.lc:3000/test/testRunner.html" class="active">Akonda Test runner</a>
+  <div id="navigation">
+    <a href="http://akonda.lc:3000/test/testRunner.html">Akonda Test runner</a>
     <a href="http://apps.akonda.lc:3001/test/testRunner.html">Akonda Apps Test runner</a>
+    <a href="http://core.lc/test/testRunner.html" class="active">Core Test runner</a>
     <form style="display: inline">
       <label for="enableCoverage">
         <input type="checkbox" id="enableCoverage" value="1" /> Enable Coverage
       </label>
     </form>
-  </div> -->
+  </div>
 
   <div id="mocha"></div>
   <div id="coverage"></div> 
@@ -37,7 +38,13 @@
 
   <script type="text/javascript">
     var files = [
-      'core'
+      'core-router',
+      'core-presenter',
+      'core-model',
+      'core-view',
+      'core-event',
+      'core-logger',
+      'core-util'
     ];
 
     var withCoverage = localStorage.getItem('core-test-with-coverage') || false;
