--- a/webdocs/examples/history.html
+++ b/webdocs/examples/history.html
@@ -7,11 +7,11 @@
   <script type="text/javascript" src="/lib/jquery.min.js"></script>
   <script type="text/javascript" src="/lib/history.js"></script>
   <script type="text/javascript" src="/lib/EventEmitter.js"></script>
-  <script type="text/javascript" src="/js/core-event.js"></script>
-  <script type="text/javascript" src="/js/core-logger.js"></script>
-  <script type="text/javascript" src="/js/core-util.js"></script>
-  <script type="text/javascript" src="/js/core-presenter.js"></script>
-  <script type="text/javascript" src="/js/core-view.js"></script>
+  <script type="text/javascript" src="/js/xqcore-event.js"></script>
+  <script type="text/javascript" src="/js/xqcore-logger.js"></script>
+  <script type="text/javascript" src="/js/xqcore-util.js"></script>
+  <script type="text/javascript" src="/js/xqcore-presenter.js"></script>
+  <script type="text/javascript" src="/js/xqcore-view.js"></script>
   <script type="text/javascript" src="/examples/js/history.js"></script>
 </head>
 
