--- a/webdocs/examples/render.html
+++ b/webdocs/examples/render.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="/lib/jquery.min.js"></script>
   <script type="text/javascript" src="/lib/EventEmitter.js"></script>
   <script type="text/javascript" src="/lib/handlebars.js"></script>
-  <script type="text/javascript" src="/js/core.js"></script>
+  <script type="text/javascript" src="/js/xqcore.js"></script>
   <script type="text/javascript" src="/examples/js/render.js"></script>
 </head>
 
