Fix viewInit test

--- a/webdocs/test/testRunner.html
+++ b/webdocs/test/testRunner.html
@@ -35,7 +35,9 @@
   <script type="text/javascript" src="mocha/sinon-expect.js"></script>
   <script type="text/javascript" src="mocha/mocha.js"></script>
   <script type="text/javascript" src="mocha/mocha-globals.js"></script>
-  <script type="text/javascript" src="http://files.akonda.lc/js/EventEmitter.js"></script>
+  <script type="text/javascript" src="/lib/EventEmitter.js"></script>
+  <script type="text/javascript" src="/lib/handlebars.js"></script>
+  <script type="text/javascript" src="/lib/history.js"></script>
   <script type="text/javascript">mocha.setup('bdd')</script>
 
   <script type="text/javascript">
