--- a/webdocs/test/testRunner.html
+++ b/webdocs/test/testRunner.html
@@ -48,7 +48,8 @@
       'xqcore-view',
       'xqcore-event',
       'xqcore-logger',
-      'xqcore-util'
+      'xqcore-util',
+      'xqcore-router'
     ];
 
     var withCoverage = localStorage.getItem('xqcore-test-with-coverage') || false;
