--- a/webdocs/examples/mvp.html
+++ b/webdocs/examples/mvp.html
@@ -15,6 +15,12 @@
 <section>
   <h1>MVP Example</h1>
   <div id="mvp1"></div>
+
+  <nav>
+    <a href="#!apple">Apple</a> |
+    <a href="#!banana">Banana</a> |
+    <a href="#!coconut">Coconut</a>
+  </nav>
 </section>
 </body>
 </html>
