--- a/webdocs/examples/history2.html
+++ b/webdocs/examples/history2.html
@@ -13,7 +13,7 @@
   <script type="text/javascript" src="/js/xqcore-util.js"></script>
   <script type="text/javascript" src="/js/xqcore-presenter.js"></script>
   <script type="text/javascript" src="/js/xqcore-view.js"></script>
-  <script type="text/javascript" src="/examples/js/history.js"></script>
+  <script type="text/javascript" src="/examples/js/history2.js"></script>
 </head>
 
 <body>
