Add GetSet and fixing tests

--- a/webdocs/examples/history.html
+++ b/webdocs/examples/history.html
@@ -7,6 +7,8 @@
   <script type="text/javascript" src="/lib/jquery.min.js"></script>
   <script type="text/javascript" src="/lib/history.js"></script>
   <script type="text/javascript" src="/lib/EventEmitter.js"></script>
+  <script type="text/javascript" src="/js/xqcore-core.js"></script>
+  <script type="text/javascript" src="/js/xqcore-router.js"></script>
   <script type="text/javascript" src="/js/xqcore-event.js"></script>
   <script type="text/javascript" src="/js/xqcore-logger.js"></script>
   <script type="text/javascript" src="/js/xqcore-util.js"></script>
