--- a/webdocs/test/testRunner.html
+++ b/webdocs/test/testRunner.html
@@ -43,10 +43,11 @@
   <script type="text/javascript">
     var files = [
       'xqcore-core',
+      'xqcore-event',
+      'xqcore-getset',
       'xqcore-presenter',
       'xqcore-model',
       'xqcore-view',
-      'xqcore-event',
       'xqcore-logger',
       'xqcore-util',
       'xqcore-router'
