Add model shema

--- a/webdocs/test/testRunner.html
+++ b/webdocs/test/testRunner.html
@@ -79,6 +79,7 @@
       }
     });
   </script>
+  <script type="text/javascript" src="spec/instance-tests.spec.js"></script>
 
   <script type="text/javascript">
     if (withCoverage) {
