--- a/examples/index.html
+++ b/examples/index.html
@@ -3,9 +3,11 @@
 <head>
   <title>XQCore Example</title>
   <meta charset="UTF-8">
+  <link rel="Stylesheet" href="css/styles.css">
   <script type="text/javascript" src="lib/jquery.js"></script>
   <script type="text/javascript" src="lib/firetpl.js"></script>
   <script type="text/javascript" src="lib/xqcore.js"></script>
+  <script type="text/javascript" src="models/add.model.js"></script>
   <script type="text/javascript" src="models/listing.model.js"></script>
   <script type="text/javascript" src="presenter/main.presenter.js"></script>
 </head>
